--- a/client/src/app/userdash/UserDashboard.css
+++ b/client/src/app/userdash/UserDashboard.css
@@ -23,7 +23,12 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
-
+.allpaymentsbutton{
+      background: aliceblue;
+    padding: 20px;
+    cursor: pointer;
+    font-weight: lighter;
+}
 .dashboard-header p {
   color: #9ca3af;
 }
@@ -99,14 +104,15 @@
   color: #062a48;
   animation: pulse 2s infinite;
 }
-.payment-history {
+.payments{
   background-color: white;
   padding: 24px;
   border-radius: 24px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
-.payment-history h2 {
+.payments h2 {
   font-size: 1.25rem;
   font-weight: bold;
   color: #374151;
@@ -116,21 +122,25 @@
   margin-bottom: 16px;
 }
 
-.payment-history ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.payments ul {
+     margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex
+;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.payment-history li {
-  padding: 12px 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #e5e7eb;
-  border-radius: 16px;
-  transition: all 0.2s;
-  cursor: pointer;
+.payments li {
+     background: aliceblue;
+    width: 100%;
+    display: flex
+;
+
+    margin: 10px 10px;
+    height: 20px;
+    align-items: center;
 }
 
 .payment-history li:hover {
