--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -20,10 +20,34 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(
+    90deg,
+    hsla(195, 14%, 73%, 1) 0%,
+    hsla(189, 59%, 67%, 1) 50%,
+    hsla(215, 70%, 67%, 1) 100%
+  );
+ background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(195, 14%, 73%, 1) 0%,
+    hsla(189, 59%, 67%, 1) 50%,
+    hsla(215, 70%, 67%, 1) 100%
+  );
 
-  height: 100vh;
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(195, 14%, 73%, 1) 0%,
+    hsla(189, 59%, 67%, 1) 50%,
+    hsla(215, 70%, 67%, 1) 100%
+  );
 
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#B0BFC4", endColorstr="#78CDDC", GradientType=1 );
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
 }
